# aoc-c

./: .clang-format  CMakeLists.txt
src/: input.c  input.h  main.c  parse.c  parse.h  print.h  register.h  solution.h
src/2024/: 01.c
src/2025/: 01.c  02.c
